--- a/Source/AliveDllAO/CMakeLists.txt
+++ b/Source/AliveDllAO/CMakeLists.txt
@@ -21,35 +21,33 @@ if (WIN32 AND CMAKE_SIZEOF_VOID_P EQUAL 4)
    target_link_libraries(AliveDllAO Detours)
 endif()
 
-# Ninja will die when it sees $(OutDir) as it does not understand what it means, therefore if using msvc only
-# use these vars if its msvc and a native vcxproj.
-if (MSVC AND CMAKE_GENERATOR MATCHES "Visual Studio")
+if (WIN32)
     add_custom_command(TARGET AliveDllAO
                        POST_BUILD
                        COMMENT "Copying to game dir ${AO_PATH}"
-                       COMMAND echo make ${AO_PATH}
-                       COMMAND if not exist "${AO_PATH}" mkdir "${AO_PATH}"
-                       COMMAND echo copy "$(OutDir)$(TargetName)$(TargetExt)" "${AO_PATH}\\AliveDllAO.dll"
-                       COMMAND copy /y "$(OutDir)$(TargetName)$(TargetExt)" "${AO_PATH}\\AliveDllAO.dll"
-                       COMMAND echo copy "$(OutDir)$(TargetName).map" "${AO_PATH}\\AliveDllAO.map"
-                       COMMAND copy /y "$(OutDir)$(TargetName).map" "${AO_PATH}\\AliveDllAO.map")
+                       COMMAND echo make "${CMAKE_COMMAND}" -E make_directory "${AO_PATH}"
+                       COMMAND "${CMAKE_COMMAND}" -E make_directory "${AO_PATH}"
+                       COMMAND echo "${CMAKE_COMMAND}" -E copy "$<TARGET_FILE:AliveDllAO>" "${AO_PATH}/AliveDllAO.dll"
+                       COMMAND "${CMAKE_COMMAND}" -E copy "$<TARGET_FILE:AliveDllAO>" "${AO_PATH}/AliveDllAO.dll"
+                       COMMAND echo "${CMAKE_COMMAND}" -E copy "$<TARGET_FILE_DIR:AliveDllAO>/AliveDllAO.map" "${AO_PATH}/AliveDllAO.map"
+                       COMMAND "${CMAKE_COMMAND}" -E copy "$<TARGET_FILE_DIR:AliveDllAO>/AliveDllAO.map" "${AO_PATH}/AliveDllAO.map")
 endif()
 
 export(TARGETS AliveDllAO FILE AliveDllAO.cmake)
-install(TARGETS AliveDllAO DESTINATION .)
+install(TARGETS AliveDllAO DESTINATION ".")
 
-install(FILES "${AO_PATH}\\AliveDllAO.map" DESTINATION ".")
+install(FILES "${AO_PATH}/AliveDllAO.map" DESTINATION ".")
 
-if (MSVC AND CMAKE_GENERATOR MATCHES "Visual Studio")
-    if (WIN32 AND CMAKE_SIZEOF_VOID_P EQUAL 4)
+if (WIN32)
+    if (CMAKE_SIZEOF_VOID_P EQUAL 4)
         add_custom_command(TARGET AliveDllAO POST_BUILD
-            COMMAND echo copy "${SDL2_INCLUDE_DIR}/../lib/x86/SDL2.dll" "$(OutDir)SDL2.dll"
-            COMMAND ${CMAKE_COMMAND} -E copy "${SDL2_INCLUDE_DIR}/../lib/x86/SDL2.dll" "$(OutDir)SDL2.dll")
+            COMMAND echo copy "${SDL2_INCLUDE_DIR}/../lib/x86/SDL2.dll" "$<TARGET_FILE_DIR:AliveDllAO>/SDL2.dll"
+            COMMAND "${CMAKE_COMMAND}" -E copy "${SDL2_INCLUDE_DIR}/../lib/x86/SDL2.dll" "$<TARGET_FILE_DIR:AliveDllAO>/SDL2.dll")
         INSTALL(FILES "${SDL2_INCLUDE_DIR}/../lib/x86/SDL2.dll" DESTINATION ".")
     else()
         add_custom_command(TARGET AliveDllAO POST_BUILD
-            COMMAND echo copy "${SDL2_INCLUDE_DIR}/../lib/x64/SDL2.dll" "$(OutDir)SDL2.dll"
-            COMMAND ${CMAKE_COMMAND} -E copy "${SDL2_INCLUDE_DIR}/../lib/x64/SDL2.dll" "$(OutDir)SDL2.dll")
+            COMMAND echo copy "${SDL2_INCLUDE_DIR}/../lib/x64/SDL2.dll" "$<TARGET_FILE_DIR:AliveDllAO>/SDL2.dll"
+            COMMAND "${CMAKE_COMMAND}" -E copy "${SDL2_INCLUDE_DIR}/../lib/x64/SDL2.dll" "$<TARGET_FILE_DIR:AliveDllAO>/SDL2.dll")
         INSTALL(FILES "${SDL2_INCLUDE_DIR}/../lib/x64/SDL2.dll" DESTINATION ".")
     endif()
 endif()
