--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,10 +13,7 @@ env:
 jobs:
   build:
     runs-on: ${{ matrix.os }}
-    defaults:
-      run:
-        working-directory: "alive reversing"
-        
+
     strategy:
       fail-fast: false
       matrix:
@@ -35,12 +32,11 @@ jobs:
       uses: actions/checkout@v4
       with:
         submodules: recursive
-        path: "alive reversing" # intentionally using a space to check if the project still builds
 
     - name: 'Windows: Install SDL2'
       if: runner.os == 'Windows'
       run: |
-        Invoke-WebRequest 'https://www.libsdl.org/release/SDL2-devel-2.0.22-VC.zip' -OutFile "$env:GITHUB_WORKSPACE\alive reversing\SDL2.zip"
+        Invoke-WebRequest 'https://www.libsdl.org/release/SDL2-devel-2.0.22-VC.zip' -OutFile "$env:GITHUB_WORKSPACE\SDL2.zip"
         7z x SDL2.zip
 
     # ======================================
@@ -52,7 +48,7 @@ jobs:
       run: |
         mkdir build
         cd build
-        cmake .. -G"Visual Studio 17 2022" -DSDL2_DIR="$env:GITHUB_WORKSPACE\alive reversing\SDL2-2.0.22" -A Win32 -DCI_PROVIDER="GitHub" -DBUILD_NUMBER="$env:GITHUB_RUN_NUMBER"
+        cmake .. -G"Visual Studio 17 2022" -DSDL2_DIR="$env:GITHUB_WORKSPACE\SDL2-2.0.22" -A Win32 -DCI_PROVIDER="GitHub" -DBUILD_NUMBER="$env:GITHUB_RUN_NUMBER"
         cmake --build . --config $env:CONFIGURATION
         cpack -G ZIP -C $env:CONFIGURATION
 
@@ -65,7 +61,7 @@ jobs:
       run: |
         mkdir build
         cd build
-        cmake .. -G"Visual Studio 17 2022" -DSDL2_DIR="$env:GITHUB_WORKSPACE\alive reversing\SDL2-2.0.22" -A x64 -DCI_PROVIDER="GitHub" -DBUILD_NUMBER="$env:GITHUB_RUN_NUMBER"
+        cmake .. -G"Visual Studio 17 2022" -DSDL2_DIR="$env:GITHUB_WORKSPACE\SDL2-2.0.22" -A x64 -DCI_PROVIDER="GitHub" -DBUILD_NUMBER="$env:GITHUB_RUN_NUMBER"
         cmake --build . --config $env:CONFIGURATION
         cpack -G ZIP -C $env:CONFIGURATION
         
@@ -127,21 +123,21 @@ jobs:
       uses: actions/upload-artifact@v4
       with:
         name: ${{ matrix.name }}-${{ env.CONFIGURATION }}-relive-binaries
-        path: "alive reversing\build\relive_binaries\"
+        path: build\relive_binaries\
 
     - name: 'Windows: Upload relive symbols'
       uses: actions/upload-artifact@v4
       if: runner.os == 'Windows'
       with:
         name: ${{ matrix.name }}-${{ env.CONFIGURATION }}-relive-symbols
-        path: "alive reversing\build\relive_symbols\"
+        path: build\relive_symbols\
 
     - name: 'Linux: Upload relive deb'
       if: matrix.name == 'Linux'
       uses: actions/upload-artifact@v4
       with:
         name: ${{ matrix.name }}-${{ env.CONFIGURATION }}-relive.deb
-        path: "alive reversing/build/relive-0.1-Linux.deb"
+        path: build/relive-0.1-Linux.deb
 
    # - name: 'macOS: Upload relive dmg'
    #   if: matrix.name == 'macOS'
